@@ -6,6 +6,8 @@ SQuirreL SQL Client Change Log
 
 Bug-Fixes:
 
+1848924: Sybase object browser contents not displayed.
+
 Oracle Plugin:
  - Allow the user to configure whether or not to show the syntax error offset in 
    the SQL Editor
